--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 		<div class="sparator"></div>
 
 		<header class="site-header">
-			<h1 class="title title-font">Hi, I am Mori</h1>
+			<h1 class="title title-font">Hi, I am Abdon</h1>
 			<p class="tagline tagline-font">
-				Web designer &amp; front-end developer. I make fun web-stuff, and wish I was less hyperactive so I could drink more coffee.
+				Electronic engineer &amp; digital fabrication expert. I make fun electronic stuff, and wish I was less hyperactive so I could drink more coffee.
 			</p>
 		</header>
 
